Создано с помощью Colaboratory

--- a/Копия_блокнота_"Мой_блокнот_ipynb".ipynb
+++ b/Копия_блокнота_"Мой_блокнот_ipynb".ipynb
@@ -6,7 +6,7 @@
       "name": "Копия блокнота \"Мой блокнот.ipynb\"",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgd0/QufiTtqH9ludBzF2a",
+      "authorship_tag": "ABX9TyPP4OC0woAIaWbE2s3INx4l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,29 +54,7 @@
         "from PIL import Image\r\n",
         "# Отрисовывать изображения в ноутбук, а не в консоль или в файл14 %matplotlib inline "
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6vuj3O-Ig5kV"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Fnm70pv_Zr7Z"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -87,28 +65,6 @@
       "source": [
         ""
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Agem4ua_Zuoi"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "crVunQUlHbr9"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -136,21 +92,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 128
         },
-        "outputId": "60f491e2-0dca-4f62-8cb2-6d01b70546b8"
+        "outputId": "e8eaa559-7de1-4600-ba3c-44e7793a96db"
       },
       "source": [
         "model = Sequential()\r\n",
         "model.add(Dense(2, input_dim = 2, use_bias=False, name = 'my_layer')\r\n",
         "model.add(Dense(1, use_bias=False))"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-78c3cd9ba2e7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    model.add(Dense(1, use_bias=False))\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-78c3cd9ba2e7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    model.add(Dense(1, use_bias=False))\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -167,27 +123,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kLadaQGtwVBo",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        },
-        "outputId": "aa9b11ee-0f4e-4297-a4d4-6263774213d6"
+        "id": "kLadaQGtwVBo"
       },
       "source": [
-        "1 model.summary()"
+        "model.summary()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-25ac55786167>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1 model.summary()\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
